--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
+    "@vapi-ai/web": "^2.5.2",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1"
